fixed payment page layout issue

--- a/public/global.css
+++ b/public/global.css
@@ -15,8 +15,6 @@ body {
 }
 
 form {
-  width: 30vw;
-  min-width: 500px;
   align-self: center;
   box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
     0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
@@ -59,7 +57,7 @@ input {
 }
 
 #card-element {
-  border-radius: 4px 4px 0 0 ;
+  border-radius: 4px 4px 0 0;
   padding: 12px;
   border: 1px solid rgba(50, 50, 93, 0.1);
   height: 44px;
